--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-authentication",
+  "name": "parions",
   "main": "server.js",
   "dependencies" : {
     "express" : "~4.0.0",           
